# test-skip-skill-1772170590-mcp-server

./: .env.example  .gitignore  README.md  deployment_params.json  docker-compose.yml  mcp_health_check.py  pyproject.toml  run_local_docker.sh  server.py
.cursor/: test-skip-skill-1772170590-mcp-server-setup-rules.md
